sfdx-source/force-app/main/default/objects/sbaa__Approver__c/fields/AQS_18_Digit_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>AQS_18_Digit_Group_Id__c</fullName>
    <formula>CASESAFEID( sbaa__GroupId__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AQS 18 Digit Group Id</label>
    <type>Text</type>
</CustomField>