sfdx-source/force-app/main/default/objects/sbaa__Approver__c/fields/X18_Digit_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Group_Id__c</fullName>
    <description>LEM-13988: It is used in &quot;18 Digit Group Id&quot; fieldset to show pending approvals for logged in user.</description>
    <formula>CASESAFEID(sbaa__GroupId__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Group Id</label>
    <type>Text</type>
</CustomField>